# lightweight_pycharts

./: .gitignore  MANIFEST.in  package-lock.json  package.json  pyproject.toml  setup.py  todos.txt  tsconfig.json  vite.config.ts
examples/99_test/: .env.txt  CSV_Data.py  Data_Updates.py  alpaca_api.py  csv_reader.py  main_csv_src.py  main_test.py
examples/data/: ohlcv_daily.csv
fracta/: __init__.py  charting_frame.py  dataframe_ext.py  indicator.py  indicator_meta.py  js_api.py  js_cmd.py  primative.py  py_cmd.py  series_common.py  util.py  window.py
fracta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fracta/broker_apis/: __init__.py  alpaca_api.py
fracta/frontend/: index.html
fracta/indicators/: __init__.py  __metadata__.py  series.py  sma.py
fracta/orm/: __init__.py  chart_options.py  series_data.py  series_options.py  types.py
frontend_src/: FRONTEND_README.md  index.html  tsconfig.json  vite.config.ts
frontend_src/components/: button.tsx  buttons.tsx  color_picker.tsx  draggable_selector.tsx  icon.tsx  icons.tsx  indicator.tsx  navigator_menu.tsx  separator.tsx  simple_menu.tsx  tab.tsx
frontend_src/css/: _layout.css  color_picker.css  draggable_selector.css  icon.css  navigator_menu.css  simple_menu.css  style_default.css  titlebar.css
frontend_src/src/: chart_container.ts  container.ts  container_manager.ts  frame.ts  icons.ts  index.ts  indicator.ts  layouts.ts  overlay.ts  pane.ts  py_api.ts  titlebar.ts  toolbox.ts  tools.ts  topbar.ts  types.ts  util_lwc.ts  wrapper.ts
frontend_src/ts/: container.ts  (+5 more)
lightweight_pycharts/: .gitignore  __init__.py  charting_frame.py  containers.py  dataframe_ext.py  events.py  indicator.py  indicator_meta.py  js_api.py  js_cmd.py  orm.py  primative.py  py_cmd.py  series.py  series_common.py  util.py  window.py
lightweight_pycharts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+452 files in other folders)
